crates/ruff/src/rules/flake8_2020/snapshots/ruff__rules__flake8_2020__tests__YTT101_YTT101.py.snap
---
source: crates/ruff/src/rules/flake8_2020/mod.rs
expression: diagnostics
---
- kind:
    name: SysVersionSlice3Referenced
    body: "`sys.version[:3]` referenced (python3.10), use `sys.version_info`"
    commit: ~
    fixable: false
  location:
    row: 6
    column: 6
  end_location:
    row: 6
    column: 17
  fix: ~
  parent: ~
- kind:
    name: SysVersionSlice3Referenced
    body: "`sys.version[:3]` referenced (python3.10), use `sys.version_info`"
    commit: ~
    fixable: false
  location:
    row: 7
    column: 6
  end_location:
    row: 7
    column: 13
  fix: ~
  parent: ~
- kind:
    name: SysVersionSlice3Referenced
    body: "`sys.version[:3]` referenced (python3.10), use `sys.version_info`"
    commit: ~
    fixable: false
  location:
    row: 8
    column: 6
  end_location:
    row: 8
    column: 7
  fix: ~
  parent: ~

