crates/ruff/src/rules/flake8_2020/snapshots/ruff__rules__flake8_2020__tests__YTT102_YTT102.py.snap
---
source: crates/ruff/src/rules/flake8_2020/mod.rs
---
./resources/test/fixtures/flake8_2020/YTT102.py:4:12: YTT102 `sys.version[2]` referenced (python3.10), use `sys.version_info`
  |
4 | from sys import version
5 | 
6 | py_minor = sys.version[2]
  |            ^^^^^^^^^^^ YTT102
7 | py_minor = version[2]
  |

./resources/test/fixtures/flake8_2020/YTT102.py:5:12: YTT102 `sys.version[2]` referenced (python3.10), use `sys.version_info`
  |
5 | py_minor = sys.version[2]
6 | py_minor = version[2]
  |            ^^^^^^^ YTT102
  |


