crates/ruff/src/rules/flake8_2020/snapshots/ruff__rules__flake8_2020__tests__YTT103_YTT103.py.snap
---
source: crates/ruff/src/rules/flake8_2020/mod.rs
expression: diagnostics
---
- kind:
    name: SysVersionCmpStr3
    body: "`sys.version` compared to string (python3.10), use `sys.version_info`"
    commit: ~
    fixable: false
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 7
  fix: ~
  parent: ~
- kind:
    name: SysVersionCmpStr3
    body: "`sys.version` compared to string (python3.10), use `sys.version_info`"
    commit: ~
    fixable: false
  location:
    row: 5
    column: 0
  end_location:
    row: 5
    column: 11
  fix: ~
  parent: ~
- kind:
    name: SysVersionCmpStr3
    body: "`sys.version` compared to string (python3.10), use `sys.version_info`"
    commit: ~
    fixable: false
  location:
    row: 6
    column: 0
  end_location:
    row: 6
    column: 11
  fix: ~
  parent: ~
- kind:
    name: SysVersionCmpStr3
    body: "`sys.version` compared to string (python3.10), use `sys.version_info`"
    commit: ~
    fixable: false
  location:
    row: 7
    column: 0
  end_location:
    row: 7
    column: 11
  fix: ~
  parent: ~
- kind:
    name: SysVersionCmpStr3
    body: "`sys.version` compared to string (python3.10), use `sys.version_info`"
    commit: ~
    fixable: false
  location:
    row: 8
    column: 0
  end_location:
    row: 8
    column: 11
  fix: ~
  parent: ~

