crates/ruff/src/rules/flake8_2020/snapshots/ruff__rules__flake8_2020__tests__YTT303_YTT303.py.snap
---
source: crates/ruff/src/rules/flake8_2020/mod.rs
---
./resources/test/fixtures/flake8_2020/YTT303.py:4:7: YTT303 `sys.version[:1]` referenced (python10), use `sys.version_info`
  |
4 | from sys import version
5 | 
6 | print(sys.version[:1])
  |       ^^^^^^^^^^^ YTT303
7 | print(version[:1])
  |

./resources/test/fixtures/flake8_2020/YTT303.py:5:7: YTT303 `sys.version[:1]` referenced (python10), use `sys.version_info`
  |
5 | print(sys.version[:1])
6 | print(version[:1])
  |       ^^^^^^^ YTT303
  |


